# bevy-ecs-wasm06

./: Cargo.toml  optimize.sh  strip copy.py  strip.py
bevy_derive/: Cargo.toml
bevy_derive/src/: lib.rs
bevy_tracing/: Cargo.toml
bevy_tracing/src/: lib.rs
bevy_utils/: Cargo.toml
bevy_utils/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: change_detection.rs  component.rs  event.rs  lib.rs
src/entity/: mod.rs
src/query/: access.rs  mod.rs  state.rs
src/schedule/: mod.rs  stage.rs  state.rs
src/storage/: blob_vec.rs  sparse_set.rs  table.rs
src/system/: exclusive_system.rs  mod.rs  query.rs
src/system/commands/: command_queue.rs  mod.rs
src/world/: entity_ref.rs  identifier.rs  mod.rs  world_cell.rs
