[package]
name = "bevy_ecs_wasm"
version = "0.6.0"
edition = "2021"
description = "Bevy Engine's entity component system"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["ecs", "game", "bevy"]
categories = ["game-engines", "data-structures"]

[features]
default = []

[dependencies]
bevy_utils = { path="bevy_utils",version = "0.6.0" }
bevy_ecs_macros = { path="macros", version = "0.6.0" }
fixedbitset = "0.4"
fxhash = "0.2"
thiserror = "1.0"
downcast-rs = "1.2"
serde = {version = "1", optional = true }