[package]
name = "bevy_utils"
version = "0.6.0"
edition = "2021"
description = "A collection of utils for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[dependencies]
bevy_derive = { path="../bevy_derive", version = "0.6.0" }
bevy_tracing = {path="../bevy_tracing"}